# rust_seminar_11_04_2023

./: Readme.md
seminar/: Cargo.toml
seminar/src/enum_snippets/: 1_plain_enum.rs  2_enum_with_value.rs  3_linked_list.rs  4_json_reader.rs
seminar/src/enum_snippets/examples/: example.json
